module(
    name = "vayu",
    version = "0.0.0",
    repo_name = "com_github_thehiddenlayer_vayu",
)

bazel_dep(name = "gazelle", version = "0.42.0", repo_name = "bazel_gazelle")
bazel_dep(name = "rules_python", version = "1.3.0")
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.3.0")
bazel_dep(name = "aspect_rules_lint", version = "1.2.2")
bazel_dep(name = "buildifier_prebuilt", version = "7.3.1")
bazel_dep(name = "rules_uv", version = "0.64.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11",
)
use_repo(python, "python_3_11")
